--- a/DevFM.WebApi/appsettings.json
+++ b/DevFM.WebApi/appsettings.json
@@ -9,5 +9,11 @@
   "SqlAdapterContext": {
     //"DefaultConnection": "Data Source=MILTEC0494\\LOCALSQL;Initial Catalog=BD_Base;Integrated Security=True",
     "DefaultConnection": "workstation id=dbcuidador.mssql.somee.com;packet size=4096;user id=fmaia_SQLLogin_1;pwd=7mb1dfxdyf;data source=dbcuidador.mssql.somee.com;persist security info=False;initial catalog=dbcuidador"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
   }
 }
