--- a/DevFM.SqlServerAdapter/DevFM.SqlServerAdapter.csproj
+++ b/DevFM.SqlServerAdapter/DevFM.SqlServerAdapter.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
